<resources>
    <string name="app_name">UbicompApplication</string>
    <string name="control_your_car">Control Your Car</string>
    <string name="control_your_car_description">Here You can monitor Your smart car. Connect your car to the app to see current <b>temperature</b> and <b>pressure</b> values in the car. The application improves vehicle\'s stability by detecting and reducing loss of traction (skidding) by using the <b>Electronic stability control (ESC)</b>.</string>
    <string name="engine">Engine</string>
    <string name="climate">Climate</string>
    <string name="started">Started</string>
    <string name="stopped">Stopped</string>
    <string name="off">Off</string>
    <string name="lights">Lights</string>
    <string name="doors">Doors</string>
    <string name="external_parameters">External parameters</string>
    <string name="controls">Controls</string>
    <string name="current_temperature">Current temperature</string>
    <string name="current_pressure">Current pressure</string>
    <string name="cooling">Cooling</string>
    <string name="heating">Heating</string>
    <string name="airwave">Airwave</string>
    <string name="stability">Stability</string>
    <string name="road_curvature">Radius of road\'s curvature</string>
    <string name="parking_sensor">Parking sensors</string>
    <string name="acceleration">Acceleration</string>
    <string name="electronic_stability_control">Electronic stability control</string>
    <string name="fan">Fan</string>
    <string name="air_conditioner">Air conditioner</string>
    <string name="activated">activated</string>
    <string name="deactivated">deactivated</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="on">On</string>
    <string name="refresh">Refresh</string>
    <string name="tap_to_connect_sensors">Tap to connect sensors</string>
    <string name="kpa">-- kPa</string>
    <string name="c">-- C</string>
</resources>