<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_navy"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/tv_title_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/urbanist"
        android:gravity="center"
        android:text="@string/controls"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tap_to_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:elevation="10dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/urbanist"
        android:gravity="center"
        android:text="@string/tap_to_connect_sensors"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@id/iv_ble"
        app:layout_constraintTop_toBottomOf="@id/tv_title_controls" />

    <ImageView
        android:id="@+id/iv_ble"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_ble_connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_controls" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="216dp"
        android:layout_marginTop="24dp"
        android:rotation="180"
        android:src="@drawable/white_car_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_ble" />

    <LinearLayout
        android:id="@+id/ll_limits"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/dark_navy">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cl_engine"
                android:background="@drawable/controls_shape">

                <TextView
                    android:id="@+id/tv_control_engine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/urbanist"
                    android:gravity="center"
                    android:text="@string/engine"
                    android:textColor="@color/lila_switch_on"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_control_engine_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/urbanist"
                    android:gravity="center"
                    android:text="@string/stopped"
                    android:textColor="@color/lila_switch_on"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_control_engine" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_engine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="90"
                    android:textOff="@string/stopped"
                    android:textOn="@string/started"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:thumbTint="@drawable/switch_thumb"
                    app:trackTint="@drawable/switch_tracker" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/dark_navy">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cl_climate"
                android:background="@drawable/controls_shape">

                <TextView
                    android:id="@+id/tv_control_climate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/urbanist"
                    android:gravity="center"
                    android:text="@string/climate"
                    android:textColor="@color/lila_switch_on"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_control_climate_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/urbanist"
                    android:gravity="center"
                    android:text="@string/off"
                    android:textColor="@color/lila_switch_on"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_control_climate" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_climate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="90"
                    android:textOff="Off"
                    android:textOn="On"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:thumbTint="@drawable/switch_thumb"
                    app:trackTint="@drawable/switch_tracker" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/nav_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/dark_navy">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cl_trunk"
                android:background="@drawable/controls_shape">

                <TextView
                    android:id="@+id/tv_control_lights"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/urbanist"
                    android:gravity="center"
                    android:text="@string/lights"
                    android:textColor="@color/lila_switch_on"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_control_trunk_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/urbanist"
                    android:gravity="center"
                    android:text="Off"
                    android:textColor="@color/lila_switch_on"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_control_lights" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_lights"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="90"
                    android:textOff="Off"
                    android:textOn="On"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:thumbTint="@drawable/switch_thumb"
                    app:trackTint="@drawable/switch_tracker" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/dark_navy">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cl_doors"
                android:background="@drawable/controls_shape">

                <TextView
                    android:id="@+id/tv_control_doors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/urbanist"
                    android:gravity="center"
                    android:text="@string/doors"
                    android:textColor="@color/lila_switch_on"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_control_doors_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/urbanist"
                    android:gravity="center"
                    android:text="Opened"
                    android:textColor="@color/lila_switch_on"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_control_doors" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_doors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="90"
                    android:textOff="@string/opened"
                    android:textOn="@string/closed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:thumbTint="@drawable/switch_thumb"
                    app:trackTint="@drawable/switch_tracker" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bottom"
        android:layout_width="match_parent"
        android:paddingHorizontal="4dp"
        android:layout_height="64dp"
        android:layout_gravity="bottom"
        android:background="@drawable/navigation_shape"
        app:itemTextColor="@color/white"
        app:itemIconTint="@drawable/icon_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>